# winpinner-rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs  main.rs.old  o.rs
src/utils/: mod.rs  test_utils.rs
tests/: components.rs  core.rs  winfetch.rs
