[package]
name = "winpinner-rust"
version = "0.1.0"
authors = ["lusamreth <lusamreth>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.3"
dbus-tokio = "0.7.3"
dbus-crossroads = "0.4.0"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3.16"
wmctrl = "0.1.8"
